# clinicaleval

./: .gitignore  README.md  pyproject.toml  test_readmission.py
configs/: base.yaml  report-distillation.yaml
data/: sample.jsonl
scripts/: run_eval.py
src/clinicaleval/: cli.py  custom_tasks.py  vllm_integration.py
