[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "clinicaleval"
version = "0.1.0"
description = "Minimal evaluation skeleton for reproducible toy runs and simple backends."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = []
dependencies = [
  "pandas>=2.0",
  "pyyaml>=6.0",
  "numpy>=1.21.0",
  "more-itertools>=8.0.0",
]

[project.optional-dependencies]
hf = [
  "lighteval",
  "vllm",
]

[project.scripts]
clinicaleval = "clinicaleval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clinicaleval"]


